Name:          jigplate
Version:       0.2.0
Cabal-Version: >= 1.2
License:       MIT
License-File:  LICENSE
Copyright:     2012, 2013, 2014, 2015 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     experimental
Bug-Reports:   jekor@jekor.com
Homepage:      https://github.com/jekor/jigplate
Package-URL:   https://github.com/jekor/jigplate/zipball/master
Category:      Text
Synopsis:      pattern-matching, composable templates
Description:   pattern-matching, composable templates
Tested-With:   GHC == 7.4.1
Build-Type:    Simple

Executable jigplate
  Main-Is:       jigplate.hs
  Build-Depends: aeson >= 0.6,
                 base >= 4,
                 bytestring,
                 parsec >= 3,
                 text,
                 unordered-containers,
                 utf8-string,
                 vector
  GHC-Options:   -Wall -fno-warn-type-defaults -O2
